--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
+  <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <style>
   .carousel-inner > .item > img,
@@ -16,7 +17,6 @@
   </style>
 </head>
 <body>
-
 <center>
   <div id="p1" class="container-fluid">
   <h1>Welcome to Marvel's page</h1>      
@@ -31,27 +31,43 @@
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="3" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="4" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="5" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="6" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="7" class="active"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="ironman1.png" alt="Chania" width="460" height="345">
+        <img src="ironman1.png" alt="ironman" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="thor1.jpg" alt="Chania" width="460" height="345">
+        <img src="hulk1.jpg" alt="hulk" width="460" height="345">
       </div>
     
       <div class="item">
-        <img src="hulk1.jpg" alt="Flower" width="460" height="345">
+        <img src="thor1.jpg" alt="thor" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="black widow.jpg" alt="Flower" width="460" height="345">
+        <img src="captain america1.jpg" alt="captain america" width="460" height="345">
+      </div>
+       <div class="item active">
+        <img src="black widow1.jpg" alt="black widow" width="460" height="345">
+      </div>
+       <div class="item active">
+        <img src="hawkeye1.jpg" alt="hawkeye" width="460" height="345">
+      </div>
+      <div class="item active">
+        <img src="quicksilver1.jpg" alt="quicksilver" width="460" height="345">
+      </div>
+      <div class="item active">
+        <img src="scarlet witch1.jpg" alt="scarlet witch" width="460" height="345">
       </div>
     </div>
 
@@ -66,7 +82,6 @@
     </a>
   </div>
 </div>
-
 
 <div class="container">
 <center>
@@ -179,4 +194,5 @@ The character was ranked 97th in Wizard's "200 Greatest Comic Book Characters of
 
 
 </body>
+
 
